<resources>
    <string name="app_name">CatalogMovieMadeOne</string>
    <string name="title">AQUAMAN</string>
    <string name="image_poster">image poster</string>
    <string name="year">(2019)</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="desc">A former American G.I. joins a yakuza family after his release from prison in post-World War II
        Osaka.
    </string>

    <string name="aquaman">Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</string>
    <string name="avengers">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="creed">Between personal obligations and training for his next big fight against an opponent with ties to his familys past, Adonis Creed is up against the challenge of his life.</string>
    <string name="bumblebee">On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</string>
    <string name="deadpool">Deadpool tells the origin story of former Special Forces operative turned mercenary Wade Wilson, who after being subjected to a rogue experiment that leaves him with accelerated healing powers, adopts the alter ego Deadpool. Armed with his new abilities and a dark, twisted sense of humor, Deadpool hunts down the man who nearly destroyed his life.</string>
    <string name="bohemian">Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</string>
    <string name="birdbox">Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</string>
    <string name="astarisborn">Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</string>
    <string name="dragonprice">An extraordinary discovery inspires two human princes and an elven assassin to team up on an epic quest to bring peace to their warring lands.</string>
    <string name="glass">In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</string>
    <string name="dragonball">Dragon Ball Z is a Japanese animated television series produced by Toei Animation. Dragon Ball Z is the sequel to the Dragon Ball anime and adapts the last 26 volumes of the original 42 volume Dragon Ball manga series created by Akira Toriyama The series Debut in 1988-1995 on Weekly Shounen Jump. Dragon Ball Z depicts the continuing adventures of Goku and his companions to defend against an assortment of villains which seek to destroy or rule the Earth.</string>

    <string-array name="title">
        <item>Krystal</item>
        <item>Iruttu Araiyil Murattu Kuthu</item>
        <item>Imagine</item>
        <item>Age</item>
        <item>Iruttu Araiyil Murattu Kuthu</item>
        <item>The Bubble</item>
        <item>Hoax</item>
        <item>London Fields</item>
        <item>Splendona</item>
        <item>Andante</item>
        <item>Scammers</item>
    </string-array>

    <string-array name="year">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>2019</item>
    </string-array>

    <string-array name="description">
        <item>Wei’s only son, Yu-Hsi, died in an accident. Yu-His’s broken cellphone still sends reminders for all the
            schedules that he can no longer follow. Wei follows them all, and opens the piano that he bought for his
            talented…
        </item>
        <item>Two friends scam people online for money.</item>
        <item>Dream and reality becomes blurred as a unique fashion model prepares for her runway debut.</item>
        <item>Wei’s only son, Yu-Hsi, died in an accident. Yu-His’s broken cellphone still sends reminders for all the
            schedules that he can no longer follow. Wei follows them all, and opens the piano that he bought for his
            talented…
        </item>
        <item>Two friends scam people online for money.</item>
        <item>Dream and reality becomes blurred as a unique fashion model prepares for her runway debut.</item>
        <item>Wei’s only son, Yu-Hsi, died in an accident. Yu-His’s broken cellphone still sends reminders for all the
            schedules that he can no longer follow. Wei follows them all, and opens the piano that he bought for his
            talented…
        </item>
        <item>Two friends scam people online for money.</item>
        <item>Dream and reality becomes blurred as a unique fashion model prepares for her runway debut.</item>
        <item>Wei’s only son, Yu-Hsi, died in an accident. Yu-His’s broken cellphone still sends reminders for all the
            schedules that he can no longer follow. Wei follows them all, and opens the piano that he bought for his
            talented…
        </item>
        <item>Two friends scam people online for money.</item>
    </string-array>

    <array name="data_photo">
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </array>

    <string name="appbar" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

</resources>
