<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/imageViewMovie"
                    android:src="@drawable/poster_bumblebee"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:layout_width="100dp"
                    android:layout_height="150dp"/>
            <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_toRightOf="@id/imageViewMovie"
                    android:layout_alignTop="@id/imageViewMovie"
                    android:text="@string/title"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textViewYear"
                    android:layout_toRightOf="@id/textViewTitle"
                    android:layout_alignTop="@id/textViewTitle"
                    android:layout_marginLeft="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/year"
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/textViewDesc"
                    android:layout_below="@id/textViewTitle"
                    android:layout_toRightOf="@id/imageViewMovie"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/desc"
                    android:textAlignment="gravity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/selengkapnya"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:text="@string/selengkapnya"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>