<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailMovieActivity">
    
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbarLayout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:elevation="4dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                        android:id="@+id/imageDetail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/poster_aquaman"
                        android:contentDescription="@string/image_poster"
                        app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                       />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:id="@+id/scrolling_container"
                android:layout_below="@id/appbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="aquaman"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:textSize="32sp"
                        tools:text="@string/title"/>

                <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:stepSize="0.1"
                        android:rating="8"
                        android:numStars="5"
                        android:isIndicator="true"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp" />

                <TextView
                        android:text="tes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:lineSpacingMultiplier="1.2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="4dp"
                        android:lineSpacingMultiplier="1.2"
                        android:text="tes"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        tools:text="@string/aquaman" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/favorite_button"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_gravity="bottom"/>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>